--- a/drupal/themes/custom/een/css/een.scss
+++ b/drupal/themes/custom/een/css/een.scss
@@ -1,8 +1,19 @@
 $menu_color: #fff;
+$header_color: #066490;
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: $header_color;
+}
 //Example changing menu of the theme
 .region-primary-menu .menu a {
   border-radius: 0;
-  background-color: transparent !important;
-  color: $menu_color !important;
+  background-color: transparent;
+  color: $menu_color;
 }
