--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -1,3 +1,6 @@
+/* direct import of gov_uk elements from the node module */
+@import 'govuk-template';
+@import 'govuk-elements';
 @import 'variables';
 @import 'font';
 
