EEN-63: Update database and error messages template

--- a/drupal/modules/custom/opportunities/templates/opportunities-results.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-results.html.twig
@@ -1,5 +1,5 @@
 <h1 class="heading-xlarge">{{ 'Find an opportunity'|t }}</h1>
-{% if results is not empty %}
+{% if results %}
     {% for row in results %}
         <div class="row">
             <h3>
