--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -1,12 +1,12 @@
 {% if opportunity is not empty %}
-    <h1 class="heading-xlarge">{{ opportunity.title }}</h1>
+    <h1 class="heading-xlarge">{{ opportunity._source.title }}</h1>
     <div>
         <div>
             <div>
                 <h2>
-                    {{ opportunity.country_code }}
-                    {{ opportunity.id }}
-                    {% if opportunity.eoi == true %}
+                    {{ opportunity._source.country_code }}
+                    {{ opportunity._source.id }}
+                    {% if opportunity._source.eoi == true %}
                         <span>{{ 'Offers'|t }}</span>
                     {% else %}
                         <span>Requests</span>
@@ -16,44 +16,44 @@
             <div>
                 <div>
                     <h3>{{ 'Abstract'|t }}</h3>
-                    {% if opportunity.summary %}
-                        <p>{{ opportunity.summary }}</p>
+                    {% if opportunity._source.summary %}
+                        <p>{{ opportunity._source.summary }}</p>
                     {% else %}
                         <p>{{ 'Not available'|t }}</p>
                     {% endif %}
                 </div>
                 <div>
                     <h3>{{ 'Full description'|t }}</h3>
-                    {% if opportunity.description %}
-                        <p>{{ opportunity.description }}</p>
+                    {% if opportunity._source.description %}
+                        <p>{{ opportunity._source.description }}</p>
                     {% else %}
                         <p>{{ 'Not available'|t }}</p>
                     {% endif %}
                 </div>
                 <div>
                     <h3>{{ 'Partner expertise sought'|t }}</h3>
-                    {% if opportunity.partner_expertise %}
-                        <p>{{ opportunity.partner_expertise }}</p>
+                    {% if opportunity._source.partner_expertise %}
+                        <p>{{ opportunity._source.partner_expertise }}</p>
                     {% else %}
                         <p>{{ 'Not available'|t }}</p>
                     {% endif %}
                 </div>
                 <div>
                     <h3>{{ 'Advantages & innovations'|t }}</h3>
-                    {% if opportunity.advantage %}
-                        <p>{{ opportunity.advantage }}</p>
+                    {% if opportunity._source.advantage %}
+                        <p>{{ opportunity._source.advantage }}</p>
                     {% else %}
                         <p>{{ 'Not available'|t }}</p>
                     {% endif %}
                 </div>
                 <div>
                     <h3>{{ 'Development Stage'|t }}</h3>
-                    <p>{{ opportunity.stage }}</p>
+                    <p>{{ opportunity._source.stage }}</p>
                 </div>
                 <div>
                     <h3>{{ 'IPR'|t }}</h3>
-                    {% if opportunity.ipr %}
-                        <p><span>{{ opportunity.ipr }}</span>{{ opportunity.ipr_comment }}</p>
+                    {% if opportunity._source.ipr %}
+                        <p><span>{{ opportunity._source.ipr }}</span>{{ opportunity._source.ipr_comment }}</p>
                     {% else %}
                         <p>{{ 'Not available'|t }}</p>
                     {% endif %}
@@ -65,21 +65,21 @@
                 <h3>{{ 'Key information'|t }}</h3>
                 <div>
                     <span>{{ 'Country of origin'|t }}</span>
-                    <span>{{ opportunity.country }}</span>
+                    <span>{{ opportunity._source.country }}</span>
                 </div>
                 <div>
                     <span>{{ 'Profile date'|t }}</span>
-                    <span>{{ opportunity.date|date("m/d/Y") }}</span>
+                    <span>{{ opportunity._source.date|date("m/d/Y") }}</span>
                 </div>
                 <div>
                     <span>{{ 'Deadline'|t }}</span>
-                    <span>{{ opportunity.deadline|date("m/d/Y") }}</span>
+                    <span>{{ opportunity._source.deadline|date("m/d/Y") }}</span>
                 </div>
             </div>
             <div>
                 <h3>{{ 'Partnership(s) sought'|t }}</h3>
-                {% if opportunity.partnership_sought %}
-                    <span>{{ opportunity.partnership_sought|join(' / ') }}</span>
+                {% if opportunity._source.partnership_sought %}
+                    <span>{{ opportunity._source.partnership_sought|join(' / ') }}</span>
                 {% else %}
                     <span>{{ 'Not available'|t }}</span>
                 {% endif %}
@@ -88,32 +88,32 @@
                 <h3>{{ 'Classification'|t }}</h3>
                 <div>
                     <h4>{{ 'Industry sectors'|t }}</h4>
-                    {% if opportunity.industries %}
-                        <p>{{ opportunity.industries|join(' / ') }}</p>
+                    {% if opportunity._source.industries %}
+                        <p>{{ opportunity._source.industries|join(' / ') }}</p>
                     {% else %}
                         <p>{{ 'Not available'|t }}</p>
                     {% endif %}
                 </div>
                 <div>
                     <h4>{{ 'Technology keywords'|t }}</h4>
-                    {% if opportunity.technologies %}
-                        <p>{{ opportunity.technologies|join(' / ') }}</p>
+                    {% if opportunity._source.technologies %}
+                        <p>{{ opportunity._source.technologies|join(' / ') }}</p>
                     {% else %}
                         <p>{{ 'Not available'|t }}</p>
                     {% endif %}
                 </div>
                 <div>
                     <h4>{{ 'Commercial keywords'|t }}</h4>
-                    {% if opportunity.commercials %}
-                        <p>{{ opportunity.commercials|join(' / ') }}</p>
+                    {% if opportunity._source.commercials %}
+                        <p>{{ opportunity._source.commercials|join(' / ') }}</p>
                     {% else %}
                         <p>{{ 'Not available'|t }}</p>
                     {% endif %}
                 </div>
                 <div>
                     <h4>{{ 'Market keywords'|t }}</h4>
-                    {% if opportunity.markets %}
-                        <p>{{ opportunity.markets|join(' / ') }}</p>
+                    {% if opportunity._source.markets %}
+                        <p>{{ opportunity._source.markets|join(' / ') }}</p>
                     {% else %}
                         <p>{{ 'Not available'|t }}</p>
                     {% endif %}
