EEN-63: Delete Unwanted Menu links + Update composer.lock

--- a/drupal/themes/custom/een/templates/layout/page.html.twig
+++ b/drupal/themes/custom/een/templates/layout/page.html.twig
@@ -68,8 +68,9 @@
     <div class="phase-banner-alpha">
         <p>
             <strong class="phase-tag">ALPHA</strong>
-            <span>This is a new service – your <a
-                        href="{{ url('entity.contact_form.canonical', {contact_form: 'feedback'}) }}">feedback</a> will help us to improve it.</span>
+            <span>This is a new service
+                {#– your <a href="{{ url('entity.contact_form.canonical', {contact_form: 'feedback'}) }}">feedback</a> will help us to improve it.#}
+            </span>
         </p>
     </div>
 
