EEN-59: Delete old end point

--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -120,6 +120,6 @@
                 </div>
             </div>
         </div>
-        <a class="button" href="{{ url('opportunities.results') }}">{{ 'Go back'|t }}</a>
+        <a class="button" href="{{ url('opportunities.search') }}?search={{ search }}">{{ 'Go back'|t }}</a>
     </div>
 {% endif %}
