--- a/drupal/themes/custom/een/scss/variables.scss
+++ b/drupal/themes/custom/een/scss/variables.scss
@@ -1,1 +1,10 @@
 $font_family: Myriad Pro, Blogger Sans, Arial;
+
+//Label
+$label-background_colour: #FFF;
+$label-border_colour: #0b0c0c;
+$label-outline-color-focus: #ffbf47;
+
+//Pagination
+$previous-next-navigation-hover_colour: #f8f8f8;
+$previous-next-navigation-active_colour: #dee0e2;
