--- a/drupal/themes/custom/een/scss/font.scss
+++ b/drupal/themes/custom/een/scss/font.scss
@@ -1,8 +1,7 @@
 
 @font-face {
   font-family: 'Blogger Sans';
-  src: url('../font/blogger-sans/Blogger Sans.otf') format("opentype"),
-  url('../font/blogger-sans/Blogger Sans.ttf') format('truetype');
+  src: url('../font/blogger-sans/Blogger Sans.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -13,9 +12,4 @@
   url('../font/blogger-sans/Blogger Sans-Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
-
-@font-face {
-  font-family: 'Myriad Pro';
-  src: url('../font/myriad-pro/MyriadPro-Regular.otf') format("opentype");
 }
