--- a/drupal/themes/custom/een/templates/form/form-element.html.twig
+++ b/drupal/themes/custom/een/templates/form/form-element.html.twig
@@ -85,9 +85,11 @@ description_display == 'invisible' ? 'visually-hidden',
             </div>
         {% endif %}
 
-        {% if errors %}
-            <span class="error-message">{{ errors.text }}</span>
-        {% endif %}
+        <span class="error-message">
+            {% if errors %}
+                {{ errors.text }}
+            {% endif %}
+        </span>
 
         {{ children }}
 
