--- a/drupal/themes/custom/een/templates/block/status-messages.html.twig
+++ b/drupal/themes/custom/een/templates/block/status-messages.html.twig
@@ -21,29 +21,24 @@
  *   - class: HTML classes.
  */
 #}
-<div class="row">
+<div class="row status-messages">
     {% for type, messages in message_list %}
         <div class="error-summary" role="contentinfo"
              aria-label="{{ status_headings[type] }}"{{ attributes|without('role', 'aria-label') }}>
-            {% if type == 'error' %}
-            <div role="alert">
-                <h1 class="heading-medium error-summary-heading">{{ 'An error as occured'|t }}</h1>
-                {% endif %}
-                {% if status_headings[type] %}
-                    <h2 class="visually-hidden">{{ status_headings[type] }}</h2>
-                {% endif %}
-                <ul class="error-summary-list">
-                    {% for message in messages %}
-                        {% if message is iterable %}
-                            <li><a href="#{{ message.key }}">{{ message.text }}</a></li>
-                        {% else %}
-                            <li>{{ message }}</li>
-                        {% endif %}
-                    {% endfor %}
-                </ul>
-                {% if type == 'error' %}
-            </div>
+
+            {% if status_headings[type] %}
+                <h2 class="visually-hidden">{{ status_headings[type] }}</h2>
             {% endif %}
+            <ul class="error-summary-list">
+                {% for message in messages %}
+                    {% if message is iterable %}
+                        <li><a href="#{{ message.key }}">{{ message.text }}</a></li>
+                    {% else %}
+                        <li>{{ message }}</li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+
         </div>
     {% endfor %}
 </div>
