--- a/drupal/themes/custom/een/templates/form/form-element.html.twig
+++ b/drupal/themes/custom/een/templates/form/form-element.html.twig
@@ -87,7 +87,12 @@ description_display == 'invisible' ? 'visually-hidden',
 
         <span class="error-message">
             {% if errors %}
-                {{ errors.text }}
+                {% if errors is iterable %}
+                    {{ errors.text }}
+                {% else %}
+                    {{ errors }}
+                {% endif %}
+
             {% endif %}
         </span>
 
