opportunities minor styling.

--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -33,23 +33,18 @@
     <hr/>
     <div>
         <div class="column-one-third">
-            <h3 class="heading-medium">{{ 'Contents'|t }}</h3>
-            <hr/>
-            <ul>
-                <li><a href="#abstract">{{ 'Abstract'|t }}</a></li>
-                <hr/>
-                <li><a href="#description">{{ 'Description'|t }}</a></li>
-                <hr/>
-                <li><a href="#partner_expertise_sought">{{ 'Partner expertise sought'|t }}</a></li>
-                <hr/>
-                <li><a href="#advantages_and_innovations">{{ 'Advantages and innovations'|t }}</a></li>
-                <hr/>
-                <li><a href="#development_stage">{{ 'Development Stage'|t }}</a></li>
-                <hr/>
-                <li><a href="#ipr">{{ 'IPR'|t }}</a></li>
-                <hr/>
-            </ul>
-            <a class="button" href="#express_your_interest">Express your interest</a>
+            <div class="contents-list">
+                <h3 class="heading-medium">{{ 'Contents'|t }}</h3>
+                <ul>
+                    <li><a href="#abstract">{{ 'Abstract'|t }}</a></li>
+                    <li><a href="#description">{{ 'Description'|t }}</a></li>
+                    <li><a href="#partner_expertise_sought">{{ 'Partner expertise sought'|t }}</a></li>
+                    <li><a href="#advantages_and_innovations">{{ 'Advantages and innovations'|t }}</a></li>
+                    <li><a href="#development_stage">{{ 'Development Stage'|t }}</a></li>
+                    <li><a href="#ipr">{{ 'IPR'|t }}</a></li>
+                </ul>
+            </div>
+            <a class="button-brand" href="#express_your_interest">Express your interest</a>
         </div>
         <div class="column-two-thirds">
             <h3 class="heading-medium" id="abstract">{{ 'Abstract'|t }}</h3>
